Fix: Incorrectly styled fade out on Safari

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -240,7 +240,7 @@ html, body {
         left: 0;
         right: 0;
         height: 8em;
-        background: linear-gradient(transparent, white);
+        background: linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 1));
       }
     }
 
